tests/ui/edge_cases/string_not_iterable.rs
use metamatch::eval;

fn main() {
    eval! {
        "asdf".map(|x|x)
    }
}
